fix chess king alignment

--- a/dashboard/src/app/features/team/attendee/attendee.style.scss
+++ b/dashboard/src/app/features/team/attendee/attendee.style.scss
@@ -42,3 +42,15 @@ img {
     margin: 0;
     border:0;
 }
+
+.fa-chess-king {
+    margin-left: 5px;
+}
+
+.attendee-name {
+    float: left;
+}
+
+.chess-king {
+    padding-top: 6px;
+}
